# CRCU-MCP

./: build_mcp.bat  install_dependencies.bat  start_mcp_server.bat
credit_union_mcp/: README.md  RELATIONSHIP_FIXES_GUIDE.md  build.py  build_mcp.bat  claude_desktop_config.json  install_dependencies.bat  pyproject.toml  requirements.txt  requirements_simple.txt  setup_environment.py  start_mcp_server.bat  test_continuity.py  test_enhanced_config.py  test_fixes.py  test_minimal_mcp.py  test_server_init.py
credit_union_mcp/config/: business_rules_config.yaml  business_rules_config_backup.yaml  database_config.yaml
credit_union_mcp/src/: __init__.py  enhanced_main.py  main.py  simple_main.py
credit_union_mcp/src/agents/: __init__.py  base_agent.py  compliance.py  financial_performance.py  member_analytics.py  operations.py  portfolio_risk.py
credit_union_mcp/src/database/: __init__.py  connection.py  data_catalog.py
credit_union_mcp/src/orchestration/: classifier.py  coordinator.py
credit_union_mcp/src/utils/: __init__.py  analysis_helpers.py  config_manager.py  continuity_manager.py  data_fetcher.py  monitoring.py  performance_utils.py  query_builder.py
credit_union_mcp/tests/: __init__.py
